--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
   <div class="container">
-    <h1>Animal Gifs Rock Hard!</h1>
+    <h1>Animal Gifs Rock All the Way!</h1>
 
     <!-- Rendered buttons will get dumped Here  -->
     <div id="buttons-view"></div>
